<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmarDatos"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvConfirmarDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_confirmar_datos"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="@dimen/tamaño_titulo_confirmarDatos"
        android:layout_margin="@dimen/margenes_entre_datos_confirmarDatos">

    </TextView>

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pnombre"
        android:layout_margin="@dimen/margenes_entre_datos_confirmarDatos"
        android:textSize="@dimen/tamaño_textos_confirmarDatos">

    </TextView>

    <TextView
        android:id="@+id/tvFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pfecha"
        android:layout_margin="@dimen/margenes_entre_datos_confirmarDatos"
        android:textSize="@dimen/tamaño_textos_confirmarDatos">

    </TextView>

    <TextView
        android:id="@+id/tvTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ptelefono"
        android:layout_margin="@dimen/margenes_entre_datos_confirmarDatos"
        android:textSize="@dimen/tamaño_textos_confirmarDatos">

    </TextView>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pemail"
        android:layout_margin="@dimen/margenes_entre_datos_confirmarDatos"
        android:textSize="@dimen/tamaño_textos_confirmarDatos">

    </TextView>

    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pdescripcion"
        android:layout_margin="@dimen/margenes_entre_datos_confirmarDatos"
        android:textSize="@dimen/tamaño_textos_confirmarDatos">

    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btnEditarDatos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton_editar"
            android:layout_margin="@dimen/margenes_entre_datos_confirmarDatos"
            android:layout_gravity="center">

        </Button>

        <Button
            android:id="@+id/btnConfirmar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margenes_entre_datos_confirmarDatos"
            android:text="@string/boton_confirmar">

        </Button>

    </LinearLayout>



</LinearLayout>