<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_edit_text"
                android:gravity="center"
                android:layout_margin="@dimen/margen_nombre_edit_text">

            </EditText>

            <DatePicker
                android:id="@+id/dpFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margen_nombre_edit_text">

            </DatePicker>

            <EditText
                android:id="@+id/etTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefono_edit_text"
                android:gravity="center"
                android:inputType="number">

            </EditText>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_edit_text"
                android:gravity="center"
                android:layout_margin="@dimen/margen_nombre_edit_text">

            </EditText>

            <EditText
                android:id="@+id/etDescipcion"
                android:layout_width="match_parent"
                android:layout_height="@dimen/ancho_descripcion"
                android:hint="@string/descripcion_edit_text"
                android:gravity="center"
                android:layout_margin="@dimen/margen_nombre_edit_text">

            </EditText>

            <Button
                android:id="@+id/btnSiguiente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boton_siguiente"
                android:layout_gravity="center">

            </Button>

        </LinearLayout>

    </ScrollView>

</LinearLayout>